--- a/Ev.io.html
+++ b/Ev.io.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://www.crazygames.com/embed/ev-io" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
+    <iframe src="https://ev.io/" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
 </body>
 </html>
