--- a/shell_shoker.html
+++ b/shell_shoker.html
@@ -7,6 +7,6 @@
     
 </head>
 <body>
-    <iframe src="https://www.crazygames.com/embed/shellshockersio" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>  
+    <iframe src="https://shellshock.io/" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>  
 </body>
 </html>
