--- a/bq.html
+++ b/bq.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <iframe src="https://browserquest.io/ style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;" ></iframe>
+  <iframe src="https://browserquest.io/" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;" ></iframe>
 </body>
 
 </html>           
