--- a/bq.html
+++ b/bq.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-   <iframe src="https://browserquest.io/" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
+    <div style="width:100%; height:30px; background-color:#cccccc;">Banner</div>
+    <iframe src="https://browserquest.io/" style="width:100%; height:100%;"></iframe>
 </body>
 
 </html>           
