--- a/bq.html
+++ b/bq.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <div style="width:100%; height:30px; background-color:#cccccc;">Banner</div>
-    <iframe src="https://browserquest.io/" style="width:100%; height:100%;"></iframe>
+    <iframe src="https://browserquest.io/" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
 </body>
-
-</html>           
+</html>
